Changed to new email

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Tianran Chen
-email: chentia1@msu.edu
+email: ti@nranchen.org
 description: "Tianran Chen's homepage"
 baseurl: ""
 url: "http://chentianran.github.io"
