--- a/_data/prep.yml
+++ b/_data/prep.yml
@@ -83,3 +83,60 @@
     url = {http://arxiv.org/abs/1703.01684},
     year = {2017}
     }
+
+- nickname: kuramoto-bkk
+  title: >
+    A network topology dependent upper bound
+    on the number of equilibria of the Kuramoto model
+  coauthors: Dhagash Mehta and Matthew Niemerg
+  arxiv: http://arxiv.org/abs/1512.04987
+  abstract: >
+    We begin with formulating the stationary equations of the Kuramoto model
+    as a system of polynomial equations in a novel way.
+    Then, based on an algebraic geometric root count, we give a prescription
+    of computing an upper bound on the number of equilibria of the
+    Kuramoto model for the most general case, i.e., defined on an
+    arbitrary graph and having generic values of natural frequencies
+    and inhomogeneous couplings.
+    We demonstrate with computational experiments utilizing the
+    numerical polynomial homotopy continuation method that
+    our bound is tight for the number of complex equilibria
+    for the Kuramoto model in the most general case.
+    We then discuss the implications or our results in relation to
+    finding all the real equilibria of the Kuramoto model.
+  bibtex: |
+    @article{chen_network_2016,
+    archivePrefix = {arXiv},
+    arxivId = {1603.05905},
+    author = {Chen, Tianran and Mehta, Dhagash and Niemerg, Matthew},
+    eprint = {1603.05905},
+    month = {mar},
+    title = {{A Network Topology Dependent Upper Bound on the Number of Equilibria of the Kuramoto Model}},
+    url = {http://arxiv.org/abs/1603.05905},
+    year = {2016}
+    }
+
+- nickname: index-resolved
+  title: >
+  coauthors: Dhagash Mehta
+  arxiv:
+  abstract: >
+    Stationary points (SPs) of the potential energy landscapes can be classified
+    by their Morse index, i.e., the number of negative eigenvalues of the
+    Hessian evaluated at the SPs.
+    In understanding chemical clusters through their potential energy landscapes,
+    only SPs of a particular Morse index are needed.
+    We propose a modification of the "fixed-point homotopy" method which can be
+    used to directly target stationary points of a specified Morse index.
+    We demonstrate the effectiveness of our approach by applying it to the
+    Lennard-Jones clusters.
+  bibtex: |
+    @article{chen_index_2015,
+    annote = {Comment: 7 pages, 2 figures},
+    author = {Chen, Tianran and Mehta, Dhagash},
+    journal = {arXiv:1504.06622 [cond-mat]},
+    month = {apr},
+    title = {An index-resolved fixed-point homotopy and potential energy landscapes},
+    url = {http://arxiv.org/abs/1504.06622},
+    year = {2015}
+    }
