--- a/_data/pubs.yml
+++ b/_data/pubs.yml
@@ -23,3 +23,68 @@
     url = {http://ieeexplore.ieee.org/document/8027142/},
     year = {2017}
     }
+
+- nickname: powerflow-bkk
+  title: On the Network Topology Dependent Solution Count of the Algebraic Load Flow Equations
+  journal: IEEE Transactions on Power Systems
+  coauthors: Dhagash Mehta
+  pdf: powerflow-bkk.pdf
+  link: https://doi.org/10.1109/TPWRS.2017.2724030
+  abstract: >
+    Active research activity in power systems areas has focused on
+    developing computational methods to solve load flow equations
+    where a key question is the maximum number of solutions.
+    Though several upper bounds exist, recent studies have hinted that
+    much sharper upper bounds that depend the topology of underlying
+    power networks may exist.
+    This paper provides a significant refinement of these observations.
+    We also develop a geometric construction called adjacency polytope
+    which accurately captures the topology of a power network
+    and is immensely useful in the computation of the solution bound.
+    Finally we highlight the significant implications of the development
+    of such solution bounds in numerically solving load flow equations.
+  bibtex: |
+    @article{chen_network_2017,
+    author = {Chen, Tianran and Mehta, Dhagash},
+    doi = {10.1109/TPWRS.2017.2724030},
+    issn = {0885-8950},
+    journal = {IEEE Transactions on Power Systems},
+    pages = {1--1},
+    title = {On the Network Topology Dependent Solution Count of the Algebraic Load Flow Equations},
+    url = {http://ieeexplore.ieee.org/document/7971956/},
+    year = {2017}
+    }
+
+- nickname: hom4ps3
+  title: Mixed cell computation in Hom4PS-3
+  journal: Journal of Symbolic Computation (2017), pp. 516-534
+  coauthors: Tsung-Lin Lee and Tien-Yien Li
+  link: http://dx.doi.org/10.1016/j.jsc.2016.07.017
+  abstract: >
+    This article presents recent efforts in improving the efficiency
+    and scalability of the mixed cell computation step in the context of
+    the Polyhedral Homotopy method.
+    Solving systems of polynomial equations is an important problem
+    in applied mathematics.
+    The Polyhedral Homotopy method is an important numerical method for this task.
+    In this method, a necessary preprocessing step, known as the
+    "mixed cell computation" problem has been the main bottleneck in the
+    parallel efficiency and scalability.
+    This article presents recent remarkable improvements in the
+    parallel scalability of the algorithm that are applicable to
+    a wide range of hardware architectures including multi-core systems,
+    NUMA systems, computer clusters, and GPUs devices.
+  bibtex: |
+    @article{chen_mixed_2017,
+    author = {Chen, Tianran and Lee, Tsung-Lin and Li, Tien-Yien},
+    doi = {10.1016/j.jsc.2016.07.017},
+    issn = {0747-7171},
+    journal = {Journal of Symbolic Computation},
+    month = {mar},
+    pages = {516--534},
+    series = {SI: Numerical Algebraic Geometry},
+    title = {{Mixed cell computation in Hom4PS-3}},
+    url = {http://www.sciencedirect.com/science/article/pii/S0747717116300542},
+    volume = {79, Part 3},
+    year = {2017}
+    }
