--- a/_data/prep.yml
+++ b/_data/prep.yml
@@ -117,9 +117,9 @@
     }
 
 - nickname: index-resolved
-  title: >
+  title: An index-resolved fixed-point homotopy and potential energy landscapes
   coauthors: Dhagash Mehta
-  arxiv:
+  arxiv: http://arxiv.org/abs/1504.06622
   abstract: >
     Stationary points (SPs) of the potential energy landscapes can be classified
     by their Morse index, i.e., the number of negative eigenvalues of the
