Fixed free-sum paper

--- a/_data/pubs.yml
+++ b/_data/pubs.yml
@@ -2,7 +2,7 @@
   title: >
     A Product Formula for the Normalized Volume of
     Free Sums of Lattice Polytopes
-  journal: Advances in Algebra: Research from the Southern Regional Algebra Conference 2017
+  journal: "Advances in Algebra: Research from the Southern Regional Algebra Conference 2017"
   coauthors: Robert Davis
   arxiv: https://arxiv.org/abs/1711.11130
   abstract: >
