--- a/_data/pubs.yml
+++ b/_data/pubs.yml
@@ -1,3 +1,35 @@
+- nickname: kuramoto-biii
+  title: >
+    Counting equilibria of the Kuramoto model using
+    birationally invariant intersection index
+  coauthors: Robert Davis and Dhagash Mehta
+  pdf: kuramoto-biii.pdf
+  journal: SIAM Journal on Applied Algebra and Geometry
+  arxiv: http://arxiv.org/abs/1708.09246
+  abstract: >
+    Synchronization in networks of interconnected oscillators is a
+    fascinating phenomenon that appear naturally in many independent fields
+    of science and engineering.
+    A substantial amount of work has been devoted to understanding
+    all possible synchronization configurations on a given network.
+    In this setting, a key problem is to determine the total number of
+    such configurations.
+    Through an algebraic formulation, for tree and cycle graphs,
+    we provide an upper bound on this number using the
+    birationally invariant intersection index of a
+    system of rational functions on a toric variety.
+  bibtex: |
+    @article{chen_counting_2017,
+        archivePrefix = {arXiv},
+        arxivId = {1708.09246},
+        author = {Chen, Tianran and Davis, Robert and Mehta, Dhagash},
+        eprint = {1708.09246},
+        month = {aug},
+        title = {{Counting equilibria of the Kuramoto model using birationally invariant intersection index}},
+        url = {http://arxiv.org/abs/1708.09246},
+        year = {2017}
+    }
+
 - nickname: tropicon-abs
   title: >
     libtropicon: A Scalable Library for Computing 
