Added kcycle-homotopy paper arxiv information.

--- a/_data/prep.yml
+++ b/_data/prep.yml
@@ -2,6 +2,7 @@
   title: A toric deformation method for solving Kuramoto equations
   coauthors: Robert Davis
   pdf: kcycle-homotopy.pdf
+  arxiv: http://arxiv.org/abs/1810.05690
   abstract: >
     The study of frequency synchronization configurations in Kuramoto models is a
     ubiquitous mathematical problem that has found applications in many seemingly
@@ -16,6 +17,17 @@
     computing mixed cells. We also explore the important consequences of this
     homotopy method in the context of direct acyclic decomposition of Kuramoto
     networks and tropical stable intersection points for Kuramoto equations.
+  bibtex: |
+    @article{ChenDavis2018Toric,
+    archivePrefix = {arXiv},
+    arxivId = {1810.05690},
+    author = {Chen, Tianran and Davis, Robert},
+    eprint = {1810.05690},
+    month = {oct},
+    title = {A toric deformation method for solving Kuramoto equations},
+    url = {http://arxiv.org/abs/1810.05690},
+    year = {2018}
+    }
 
 - nickname: unmixing
   title: Unmixing the mixed volume computation
@@ -43,7 +55,7 @@
     archivePrefix = {arXiv},
     arxivId = {1703.01684},
     month = {mar},
-    title = {{Unmixing the mixed volume computation}},
+    title = {Unmixing the mixed volume computation},
     url = {http://arxiv.org/abs/1703.01684},
     year = {2017}
     }
