Fixing ap-kuramoto paper

--- a/_data/pubs.yml
+++ b/_data/pubs.yml
@@ -1,7 +1,7 @@
 - nickname: ap-kuramoto
   title: Directed acyclic decomposition of Kuramoto equations
   pdf: ap-kuramoto.pdf
-  journal: Chaos: An Interdisciplinary Journal of Nonlinear Science, Vol.29, Issue 9 2019
+  journal: "Chaos: An Interdisciplinary Journal of Nonlinear Science, Vol.29, Issue 9 2019"
   link: https://doi.org/10.1063/1.5097826
   arxiv: http://arxiv.org/abs/1903.04492
   abstract: >
