Excluding reveal submodules

--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,4 @@ github_username:  chentianran
 # Build settings
 markdown: kramdown
 permalink: pretty
-exclude: [ vendor ]
+exclude: [ vendor, reveal ]
